--- a/package.json
+++ b/package.json
@@ -17,5 +17,16 @@
     "browser-sync": "^2.26.13",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JKevyn/gym.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JKevyn/gym/issues"
+  },
+  "homepage": "https://github.com/JKevyn/gym#readme",
+  "description": ""
 }
