--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "server.js",
   "scripts": {
     "start": "npm-run-all -p nodemon browsersync",
-    "browsersync": "browser-sync start --proxy http://localhost:5000 --file 'public,views'",
-    "nodemon": "nodemon server.js"
+    "browsersync": "browser-sync start --proxy http://localhost:3333 --file 'public,src/app/views'",
+    "nodemon": "nodemon src/server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
-    "nunjucks": "^3.2.2"
+    "nunjucks": "^3.2.2",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "browser-sync": "^2.26.13",
